RESOLVED FIXED198146
REGRESSION (r240552): PDF contents are not exposed to Accessibility (VO, etc.)
https://bugs.webkit.org/show_bug.cgi?id=198146
Summary REGRESSION (r240552): PDF contents are not exposed to Accessibility (VO, etc.)
Tim Horton
Reported 2019-05-22 16:08:09 PDT
REGRESSION (r240552): PDF contents are not exposed to Accessibility (VO, etc.)
Attachments
Patch (6.57 KB, patch)
2019-05-22 16:08 PDT, Tim Horton
no flags
Patch (6.62 KB, patch)
2019-05-22 16:20 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-05-22 16:08:23 PDT
Tim Horton
Comment 2 2019-05-22 16:08:25 PDT
Tim Horton
Comment 3 2019-05-22 16:15:51 PDT
Comment on attachment 370461 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=370461&action=review > Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:231 > + [m_mockAccessibilityElement setHasMainFramePlugin:mainFrame()->document()->isPluginDocument()]; Will add a null check here too
Tim Horton
Comment 4 2019-05-22 16:20:04 PDT
WebKit Commit Bot
Comment 5 2019-05-22 17:07:28 PDT
Comment on attachment 370463 [details] Patch Clearing flags on attachment: 370463 Committed r245660: <https://trac.webkit.org/changeset/245660>
WebKit Commit Bot
Comment 6 2019-05-22 17:07:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.